--- a/app/index.html
+++ b/app/index.html
@@ -249,6 +249,8 @@
   <!-- app principal -->
   <script src="./app.js"></script>
 
+  <script src="./js/ui.topbar.js"></script>
+
   <!-- service worker register (fixo) -->
   <script>
     if ("serviceWorker" in navigator) {
