Add ui.gear.js script to index.html

--- a/app/index.html
+++ b/app/index.html
@@ -249,6 +249,8 @@
   <!-- app principal -->
   <script src="./app.js"></script>
 
+  <script src="./js/ui.gear.js"></script>
+
   <script src="./js/ui.topbar.js"></script>
 
   <!-- service worker register (fixo) -->
