--- a/app/privacy.html
+++ b/app/privacy.html
@@ -1,30 +1,12 @@
-<!doctype html>
-<html lang="pt-BR"><head>
-<meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/>
+<!doctype html><html lang="pt-BR"><meta charset="utf-8">
+<meta name="viewport" content="width=device-width,initial-scale=1">
 <title>Privacidade • RControl Factory</title>
-<link rel="stylesheet" href="./styles.css"/>
-</head><body>
-<div class="wrap">
-  <div class="card">
-    <h1>Política de Privacidade</h1>
-    <p class="muted">Última atualização: 2026-02-09</p>
-
-    <h3>1) O que a Factory coleta</h3>
-    <p>Por padrão, a Factory é <strong>offline-first</strong> e guarda dados <strong>no seu dispositivo</strong> (localStorage), como: apps criados, arquivos e configurações.</p>
-
-    <h3>2) O que a Factory NÃO coleta</h3>
-    <p>A Factory não envia seus apps/arquivos para servidor automaticamente. Export/Import só acontece quando você clicar.</p>
-
-    <h3>3) Segurança</h3>
-    <p>A área Admin é protegida por PIN e pode ser bloqueada/desbloqueada. Você é responsável por manter o dispositivo seguro.</p>
-
-    <h3>4) Serviços externos</h3>
-    <p>Quando você optar por usar serviços como Supabase, GitHub ou outros, esses serviços terão suas próprias políticas.</p>
-
-    <h3>5) Contato</h3>
-    <p>Se você opera a Factory como produto para clientes, adicione aqui seu canal oficial de suporte.</p>
-
-    <p><a href="./">Voltar</a></p>
-  </div>
-</div>
-</body></html>
+<style>body{margin:0;font-family:system-ui;background:#0b1220;color:#e8eefc;padding:18px}a{color:#bcd0ff}</style>
+<h1>Política de Privacidade</h1>
+<p>Este app (Factory) armazena dados localmente no seu navegador (localStorage) para funcionar offline-first.</p>
+<ul>
+  <li>Não enviamos seus projetos para terceiros (a menos que você configure integrações futuras).</li>
+  <li>Arquivos no Vault ficam no seu dispositivo (base64 no navegador).</li>
+</ul>
+<p>Versão inicial (MVP).</p>
+</html>
