--- a/app/terms.html
+++ b/app/terms.html
@@ -1,30 +1,8 @@
-<!doctype html>
-<html lang="pt-BR"><head>
-<meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/>
+<!doctype html><html lang="pt-BR"><meta charset="utf-8">
+<meta name="viewport" content="width=device-width,initial-scale=1">
 <title>Termos • RControl Factory</title>
-<link rel="stylesheet" href="./styles.css"/>
-</head><body>
-<div class="wrap">
-  <div class="card">
-    <h1>Termos de Uso</h1>
-    <p class="muted">Última atualização: 2026-02-09</p>
-
-    <h3>1) Finalidade</h3>
-    <p>A RControl Factory é uma ferramenta para criação e teste de apps (PWA) e geração de ZIP.</p>
-
-    <h3>2) Responsabilidade</h3>
-    <p>Você é responsável pelo conteúdo e pelos apps criados. Faça backups (Export) antes de mudanças grandes.</p>
-
-    <h3>3) Segurança</h3>
-    <p>O acesso ao Admin pode exigir PIN. Mantenha o dispositivo protegido. A ferramenta não garante inviolabilidade do aparelho.</p>
-
-    <h3>4) Sem garantia</h3>
-    <p>A ferramenta é fornecida “como está”, podendo evoluir e mudar.</p>
-
-    <h3>5) Propriedade</h3>
-    <p>Os apps criados são seus. O core da Factory pode ter regras internas de licenciamento se você distribuir publicamente.</p>
-
-    <p><a href="./">Voltar</a></p>
-  </div>
-</div>
-</body></html>
+<style>body{margin:0;font-family:system-ui;background:#0b1220;color:#e8eefc;padding:18px}a{color:#bcd0ff}</style>
+<h1>Termos de Uso</h1>
+<p>Ferramenta interna para criação e testes. Você é responsável pelo uso e pelos apps gerados.</p>
+<p>Versão inicial (MVP).</p>
+</html>
